--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="js/Markdown.Converter.js"></script>
     <script type="text/javascript" src="js/Markdown.Sanitizer.js"></script>
     <script type="text/javascript" src="js/Markdown.Editor.js"></script>
+    <script type="text/javascript" src="js/sanitize.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 
 </head>
@@ -55,7 +56,6 @@
                                     <li><a ng-click="logOutApp()">退出</a></li>
                                 </ul>
                             </li>
-
                         </ul>
                     </div>
                 </div>
