--- a/public/html/article-list.html
+++ b/public/html/article-list.html
@@ -26,35 +26,47 @@
             <input type="text" class="searchBox form-control" placeholder="搜索博文标题或内容" ng-model="searchData.data" ng-change="searchChange()"/>
         </div>
     </div>
-    <ul class="media-list">
-        <li class="media" ng-repeat="article in articleList">
-            <a class="media-object left" title="删除文章" ng-click="remove(article)">
-                <i class="fa fa-trash-o"></i>
-            </a>
-            <div class="media-body" id="{{article.article_id}}">
-                <div class="media-header">
-                    <a ng-href="{{'#/articledetail/'+article.article_id}}">
-                        <i class="primary" ng-class="{'fa fa-hand-o-up':article.status==2, 'fa fa-external-link':article.status!=2}"></i>{{article.cover_text}}</a>
-                    <i class="fa fa-thumbs-up hot" title="推荐"></i>
-                    <a class="pure-button pure-button-link" ng-href="{{'#/articledetail/'+article.article_id}}"><i class="fa fa-edit"></i></a>
-                    <i class="fa fa-star-o right hot hover-icon" title="赞">赞: {{article.thumbs_count}}</i>
-                </div>
-                <div class="media-content list-content" ng-show="parent.sumModel" gen-parse-md="article.contents"></div>
-                <div class="media-footer">
-                    <a ng-href="{{'#/detail/'+article.author.userid}}"><i class="fa fa-pencil success"></i>作者: {{article.author.userid}}</a>
-                    <i class="fa fa-clock-o" title="{{article.time}} 发布">发布于: {{article.time}}</i>
-                    <i class="fa fa-comments-o" title="评论">评论数: {{article.comments_count}}</i>
-                    标签: <a ng-repeat="tag in article.tags" ng-href="{{'#/tag/'+tag.id}}" class="pure-button pure-button-link">{{tag.name}}</a>
-                </div>
-            </div>
-        </li>
-    </ul>
-    <p class="inner" ng-show="articleList.length==0">暂无</p>
-    <nav>
-        <ul class="pagination">
-            <li ng-class='{disabled:currentPage==0}'><a href="#/2" ng-click="changePage(currentPage-1)" target="_self">《</a></li>
-            <li ng-repeat="index in arrPage" ng-class='{active:$index==currentPage}' ng-click="changePage($index)"><a href="#/2" target="_self">{{index+1}}</a></li>
-            <li ng-class='{disabled:currentPage==arrPage.length-1}'><a href="#/2" ng-click="changePage(currentPage+1)" target="_self">》</a></li>
+    <div class="row">
+        <div class="col-md-12 profile-rightSide">
+        <ul role="tablist" class="nav nav-tabs">
+            <li class="active" role="presentation"><a aria-expanded="true" aria-controls="home" data-toggle="tab" role="tab" id="new-tab" target="_self">最新博文</a></li>
+            <li role="presentation" class=""><a aria-controls="profile" data-toggle="tab" id="hot-tab"  role="tab" aria-expanded="false" target="_self">最热博文</a></li>
+
         </ul>
-    </nav>
+        <div class="tab-content">
+            <div aria-labelledby="new-tab" class="tab-pane fade active in" role="tabpanel">
+                <ul class="media-list">
+                    <li ng-repeat="article in articleList">
+                        <div >
+                            <table class="table table-bordered table-hover">
+                                <tbody>
+                                <tr>
+                                    <td class="col-md-2" align="center">[<a ng-repeat="tag in article.tags" ng-href="{{'#/tag/'+tag}}" class="pure-button pure-button-link">{{tag|articletag}}</a>]</td>
+                                    <td class="col-md-7">
+                                        <div class="col-md-12"><a ng-href="{{'#/articledetail/'+article.article_id}}"> {{article.cover_text|articletitle}}</a> <font color="gray">(  评论数:{{article.comments_count}}  赞: {{article.thumbs_count}} )</font></div>
+                                    </td>
+                                    <td class="col-md-3">
+                                        <div>
+                                            <a ng-href="{{'#/detail/'+article.author.userid}}">{{article.author.nickname}}</a>
+                                        </div>
+                                        <div class="time-show">
+                                            {{article.time|timeconvert}}
+                                        </div>
+                                    </td>
+
+                                </tbody>
+                            </table>
+                        </div>
+
+                    </li>
+                </ul>
+
+            </div>
+            <div aria-labelledby="hot-tab" id="profile" class="tab-pane fade" role="tabpanel">
+
+            </div>
+        </div>
+        <div gen-pagination="pagination"></div>
+    </div>
+    </div>
 </div>
