--- a/public/html/task-list.html
+++ b/public/html/task-list.html
@@ -1,67 +1,60 @@
-<div  ng-controller="tasklistController">
-    <ul class="nav nav-tabs">
-    <li class="active"><a showtab="" href="#3">待审批</a></li>
-    <li><a showtab="" href="#tasklisthistory">已审批</a></li>
-    </ul>
+<div  class="main-bg" ng-controller="tasklistController">
+    <div class="row"><h2 class="col-md-12">任务管理</h2></div>
+    <div class="">
+        <ul role="tablist" class="nav nav-tabs" id="taskTab">
+            <li ng-class="{true: 'active', false: 'inactive'}[checked]" role="presentation"><a aria-expanded="true" aria-controls="onchecktask" data-toggle="tab" role="tab" id="onchecktask-tab"  href="#3">待审批</a></li>
+            <li role="presentation" ng-class="{false: 'active', true: 'inactive'}[checked]"><a aria-controls="checkedtask" data-toggle="tab" id="checkedtask-tab"  role="tab" href="#tasklisthistory" aria-expanded="false">已审批</a></li>
+        </ul>
+        <table st-table="displayedCollection" st-safe-src="rowCollection" class="table table-striped">
+            <thead>
+            <tr>
+                <th st-sort="taskid">taskid</th>
+                <th st-sort="type">type</th>
+                <th st-sort="desc">desc</th>
+                <th st-sort="images">images</th>
+                <th st-sort="status">status</th>
 
+                <th st-sort="userid">userid</th>
+                <th st-sort="nickname">nickname</th>
+                <th st-sort="profile">profile</th>
+                <th st-sort="audit">audit</th>
+                <th st-sort="reason">reason</th>
+                <th ng-show="checked">action</th>
+            </tr>
 
+            </thead>
+            <tbody>
+            <tr ng-repeat="row in displayedCollection">
+                <td>{{row.taskid}}</td>
+                <td>{{row.type|typename}}</td>
+                <td>{{row.desc}}</td>
+                <td ng-repeat="image in row.images ">
+                    <a href="{{image}}" target=_blank><div><img ng-src="{{image}}" class="img-small"></div></a>
+                </td>
+                <td>{{row.status|statusname}}</td>
 
-    <table st-table="displayedCollection" st-safe-src="rowCollection" class="table table-striped">
-        <thead>
+                <td>{{row.userid}}</td>
+                <td>{{row.nickname}}</td>
+                <td><img ng-src="{{row.profile|profilefilter}}" class="img-circle admin-profile"> </td>
 
-        <tr>
-            <th st-sort="taskid">taskid</th>
-            <th st-sort="type">type</th>
-            <th st-sort="desc">desc</th>
-            <th st-sort="images">images</th>
-            <th st-sort="status">status</th>
+                <td>
+                    <textarea rows="4" name="S1" cols="20" ng-model="row.reason"></textarea>
+                </td>
+                <td ng-show="checked">
+                    <button type="button" class="btn btn-primary" ng-click="Approve(row)">批准</button>
 
-            <th st-sort="userid">userid</th>
-            <th st-sort="nickname">nickname</th>
-            <th st-sort="profile">profile</th>
-            <th st-sort="audit">audit</th>
-            <th st-sort="reason">reason</th>
-        </tr>
-
-        </thead>
-        <tbody>
-        <tr ng-repeat="row in displayedCollection ">
-            <td>{{row.taskid}}</td>
-            <td>{{row.type|typename}}</td>
-            <td>{{row.desc}}</td>
-
-
-
-            <td ng-repeat="image in row.images ">
-                <a href="{{image}}" target=_blank><img ng-src="{{image}}" width="100" height="100"></a>
-            </td>
-            <td>{{row.status|statusname}}</td>
-
-            <td>{{row.userid}}</td>
-            <td>{{row.nickname}}</td>
-            <td><img ng-src="{{row.profile}}" width="50" height="100"> </td>
-            <td>
-               <button type="button" class="btn btn-primary" ng-click="Approve(row)">批准</button>
-
-                <button type="button" class="btn btn-primary" ng-click="Reject(row)">拒绝</button>
-
-            </td>
-            <td>
-                <textarea rows="4" name="S1" cols="20" ng-model="row.reason"></textarea>
-
-
-            </td>
-        </tr>
-        </tbody>
-        <tfoot>
-        <tr>
-            <td colspan="5" class="text-center">
-                <div st-pagination="" st-items-by-page="itemsByPage" st-displayed-pages="7"></div>
-            </td>
-        </tr>
-        </tfoot>
-    </table>
-
-
+                    <button type="button" class="btn btn-primary" ng-click="Reject(row)">拒绝</button>
+                </td>
+            </tr>
+            </tbody>
+            <tfoot>
+            <tr>
+                <td colspan="5" class="text-center">
+                    <div st-pagination="" st-items-by-page="itemsByPage" st-displayed-pages="10"></div>
+                </td>
+            </tr>
+            </tfoot>
+        </table>
+    </div>
 
 </div>
