--- a/public/html/task-list.html
+++ b/public/html/task-list.html
@@ -1,5 +1,10 @@
 <div  class="main-bg" ng-controller="tasklistController">
     <div class="row"><h2 class="col-md-12">任务管理</h2></div>
+    <div class="row">
+        <div id="search" class="col-md-4">
+            <input type="text" class="searchBox form-control" placeholder="搜索昵称" ng-model="searchData.data" ng-change="searchChange()"/>
+        </div>
+    </div>
     <div class="">
         <ul role="tablist" class="nav nav-tabs" id="taskTab">
             <li ng-class="{true: 'active', false: 'inactive'}[checked]" role="presentation"><a aria-expanded="true" aria-controls="onchecktask" data-toggle="tab" role="tab" id="onchecktask-tab"  href="#3">待审批</a></li>
@@ -8,13 +13,15 @@
         <table st-table="displayedCollection" st-safe-src="rowCollection" class="table table-striped">
             <thead>
             <tr>
-                <th st-sort="taskid">taskid</th>
+                <th st-sort="source">source</th>
                 <th st-sort="type">type</th>
                 <th st-sort="desc">desc</th>
                 <th st-sort="images">images</th>
 
                 <th st-sort="nickname">nickname</th>
-                <th st-sort="profile">profile</th>
+                <th st-sort="begin_time">begin_time</th>
+                <th st-sort="end_time">end_time</th>
+                <th st-sort="distance">distance</th>
                 <th st-sort="reason">reason</th>
                 <th ng-show="checked">action</th>
             </tr>
@@ -22,23 +29,24 @@
             </thead>
             <tbody>
             <tr ng-repeat="row in displayedCollection">
-                <td class="col-md-1">{{row.taskid}}</td>
+                <td class="col-md-1">{{row.source|taskSource}}</td>
                 <td class="col-md-1">{{row.type|typename}}</td>
-                <td class="col-md-2">{{row.desc}}</td>
-                <td class="col-md-2">
+                <td class="col-md-1">{{row.desc}}</td>
+                <td class="col-md-1">
+                    <div align="center">
                     <div ng-show="row.images.length>0">
-                        <a href="{{row.images[0]}}" target=_blank><div><img ng-src="{{row.images[0]}}" class="img-small"></div></a>
-
-                        <p>共{{row.images.length}}张图片</p>
+                        <a href="html/task-images.html" target="_blank" data-toggle="tooltip" title="请点击图片查看更多" ng-click="showImgs($index)"><img ng-src="{{row.images[0]}}" class="img-small"><br><p>共{{row.images.length}}张图片</p></a>
                     </div>
                     <p class="inner" ng-show="row.images.length==0">无图片</p>
-
+                    </div>
                 </td>
 
-                <td class="col-md-2">{{row.nickname}}</td>
-                <td class="col-md-1"><img ng-src="{{row.profile|profilefilter}}" class="img-circle admin-profile"> </td>
+                <td class="col-md-1"><a ng-href="{{'#/detail/'+row.userid}}">{{row.nickname}}</a></td>
+                <td class="col-md-1">{{row.begin_time|timeconvert}}</td>
+                <td class="col-md-1">{{row.end_time|timeconvert}}</td>
+                <td class="col-md-1">{{row.distance}} m</td>
 
-                <td class="col-md-2">
+                <td class="col-md-1">
                     <textarea rows="4" name="S1" cols="20" ng-model="row.reason"></textarea>
                 </td>
                 <td ng-show="checked" class="col-md-1">
