--- a/public/html/task-images.html
+++ b/public/html/task-images.html
@@ -19,7 +19,7 @@
         var imgArray = JSON.parse(jsonStr).task_imgs
         for(var i=0;i<imgArray.length;i++)
         {
-            var html =  '<a href="' + imgArray[i] + '"target="_blank"><img src="' + imgArray[i] + '"</img></a><br>'
+            var html =  '<a href="' + imgArray[i] + '"target="_blank"><img src="' + imgArray[i] + '"</img></a><br>next picture<br>======================================<br>'
             $('#imgDiv').append(html)
         }
 
