--- a/public/html/task-list.html
+++ b/public/html/task-list.html
@@ -56,14 +56,8 @@
                 </td>
             </tr>
             </tbody>
-            <tfoot>
-            <tr>
-                <td colspan="5" class="text-center">
-                    <div st-pagination="" st-items-by-page="itemsByPage" st-displayed-pages="10"></div>
-                </td>
-            </tr>
-            </tfoot>
         </table>
+        <div gen-pagination="pagination"></div>
     </div>
 
 </div>
