add purchase api

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -9,6 +9,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 14">
 <meta name=Originator content="Microsoft Word 14">
+<title>悦动力用户隐私协议</title>
 <link rel=File-List href="悦动力用户隐私协议_files/filelist.xml">
 <!--[if gte mso 9]><xml>
  <o:DocumentProperties>
