--- a/public/html/user-list.html
+++ b/public/html/user-list.html
@@ -73,6 +73,7 @@
             <th>头像</th>
             <th ng-click="sort('userid')">账户<img ng-src="{{sortImg[sortState.userid]}}" style="float:right;"></th>
             <th ng-click="sort('nickname')">昵称<img ng-src="{{sortImg[sortState.nickname]}}" style="float:right;"></th>
+            <th ng-click="sort('email')">邮箱<img ng-src="{{sortImg[sortState.email]}}" style="float:right;"></th>
             <th ng-click="sort('gender')">性别<img ng-src="{{sortImg[sortState.gender]}}" style="float:right;"></th>
             <th ng-click="sort('age')">年龄<img ng-src="{{sortImg[sortState.age]}}" style="float:right;"></th>
             <th ng-click="sort('regtime')">注册时间<img ng-src="{{sortImg[sortState.regtime]}}" style="float:right;"></th>
@@ -86,6 +87,7 @@
             <td><a href="{{'#/detail/'+user.userid}}"><img ng-src="{{user.profile}}" class="img-circle" alt="资源无效，不能加载" onerror="this.src='../images/profile-404.png'"></a></td>
             <td>{{user.userid}}</td>
             <td>{{user.nickname}}</td>
+            <td>{{user.email}}</td>
             <td>{{user.gender}}</td>
             <td>{{user.age}}</td>
             <td>{{user.reg_time}}</td>
