--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,9 @@
     	    </div>   
     	</div>
     </nav>
-    <div ng-view></div>
+    <div class="container1">
+        <div ng-view></div>
+    </div>
     <div class="modal fade moduledialog" id="myModalDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
