--- a/public/html/user-details.html
+++ b/public/html/user-details.html
@@ -32,6 +32,10 @@
                           <td><div class="banstate" id="detailBan" ng-style="userDetail.banStyle">{{userDetail.ban_statusTmp}}</div></td>
                         </tr>
                         <tr>
+                          <td>邮箱：</td>
+                          <td>{{userDetail.email}}</td>
+                        </tr>
+                        <tr>
                           <td>性别：</td>
                           <td>{{userDetail.gender}}</td>
                         </tr>
